src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Project</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>NPI</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Formula for an Existing Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Brand Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Manufacturing and WH Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sales Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Spec Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw Material Intro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Changes for Existing Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Projects and Approval</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRJ-{0000000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects and Approval</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>